# dux-scalable-worker

./: .gitlab-ci.yml  Cargo.toml  README.md
building/: dux-worker.conf
building/rpm/: dux-worker.spec
src/: cliargs.rs  conf.rs  main.rs
