[package]
name = "dux-worker"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duxcore = "0.1.2"
rayon = "1.10.0"
amqprs = "1.6.2"
tokio = { version = "1.38.1", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = {version = "1.0.204", features= ["derive"]}
serde_json = "1.0.120"
env_logger = "0.11.3"
log = "0.4.22"
config = "0.14.0"
clap = { version = "4.5.9", features = ["derive"] }
simple_crypt = "0.2.3"
