[package]
name = "dux-worker"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duxcore = "0.1.4"
rayon = "1.10.0"
amqprs = "1.7.0"
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = {version = "1.0.209", features= ["derive"]}
serde_json = "1.0.127"
env_logger = "0.11.5"
log = "0.4.22"
config = "0.14.0"
clap = { version = "4.5.16", features = ["derive"] }
simple_crypt = "0.2.3"
